Update and rename INDEX.html to index.html

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 				</tr>
 				<tr>
 					<td>
-						<button style="submit"><a href="BIODATA.html">Login</a></button>
+						<button style="submit"><a href="biodata.html">Login</a></button>
 					</td>
 				</tr>
 			</table>
 			<table>
 				<tr>
 					<td>
-						<button style="submit" style="colos:red"><a href="REGISTRASI.html">Sign Up</a></button>
+						<button style="submit" style="colos:red"><a href="registrasi.html">Sign Up</a></button>
 					</td>
 				</tr>
 
