Update and rename REGISTRASI.html to registrasi.html

--- a/registrasi.html
+++ b/registrasi.html
@@ -38,7 +38,7 @@
 			</tr>
 			<tr>
 				<td>
-					<button style="submit"><a href="INDEX.html">Sign Up</a></button>
+					<button style="submit"><a href="index.html">Sign Up</a></button>
 				</td>
 			</tr>
 		</table>
