Update and rename BIODATA.html to biodata.html

--- a/biodata.html
+++ b/biodata.html
@@ -90,7 +90,7 @@
 				</table>
 				<button style="submit">simpan</button>
 				<br><br>
-				<button style="submit"><a href="LATIHAN HTML.html">Kembali</a></button>
+				<button style="submit"><a href="index.html">Kembali</a></button>
 			</form>
 
 		</body>
